# database-update

clickhouse/: .env  Cargo.toml  README.md  debug_migration.sh  query_table_structure.sh  run.sh  test_migration.sh
clickhouse/migrations/: V000__baseline_existing_database.sql  V001__create_users_table.sql  V002__add_user_status_column.sql  V003__create_user_profiles_table.sql  V004__insert_sample_data.sql  V005__add_user_roles_table.sql  V006__改变数据类型.sql  V006__新增用户电话列_users.sql
clickhouse/src/: database.rs  lib.rs  main.rs  models.rs
clickhouse/src/clickhouse_migrator/: mod.rs  simple_migrator.rs
postgresql/: Diesel.md  Diesel使用指南.md  SQLx.md  SQLx_vs_Diesel_比较分析.md  SQLx使用指南.md  compare_both.sh
postgresql/refinery/: .env  Cargo.toml  README.md  Refinery使用指南.md  refinery.toml  run.sh  双连接架构说明.md  双连接示例.rs  快速参考.md  迁移错误处理机制详解.md
postgresql/refinery/migrations/: V001__initial_schema.sql  V002__add_user_preferences.sql  V003__rename_product_name_column.sql  V004__rename_price_name_column.sql  V005__delete_sku_column.sql  V006__add_constraint.sql  V007__add_index.sql  V008__add_customer_table.sql  V009__删除一列.sql
postgresql/refinery/src/: data.rs  database.rs  main.rs  tables.rs
postgresql/sqlx/: .env  Cargo.toml  README.md  run.sh  verify_tables.sh  环境变量配置说明.md
postgresql/sqlx/migrations/: 0017_新增列.sql  0018_ceshi_error.sql  001_initial_schema.sql  002_add_user_preferences.sql  003_rename_product_name_column.sql  004_rename_price_name_column.sql  005_delete_sku_solumn.sql  006_add_constraint.sql  007_delete_constrate.sql  008_add_index.sql  009_delete_reindex_index.sql  010_数据类型变更.sql  011_视图和存储过程.sql  012_创建触发器.sql  013_删除触发器.sql  014_数据迁移和转换.sql  015_权限和安全操作.sql  016_备份相关操作.sql
postgresql/sqlx/src/: data.rs  database.rs  tables.rs
postgresql/sqlx1/: .env  .gitignore  SQLx集成总结.md  view_data.sh
(+2 files in other folders)
