[package]
name = "clickhouse_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = "0.13.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
sha2 = "0.10"
tracing = "0.1.41"
tracing-subscriber = "0.3"
